* detect removable disk
* detect optical disk
* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?

Beta release
* remove deprecated functions in libsmdev_legacy.[ch]

Deployment
* add msvscpp files
* add borlandc files
* add macosx files

Test:
* add autoconf/make test suite

20101113
* textual changes
* updated configure.ac
* updated include/error.h, include/types.h
* updated liberror

20101014
* updated common

20101013
* worked on improving device info
* renamed Win95/98 safe WINAPI replacement functions
  to prevent conflict with libbfio

20101012
* worked on improving device info

20101008
* worked on improving device info
* updated offset list

20101007
* updated offset list
* updated liberror, libnotify
* worked on WINAPI error skip
* worked on detailed error reporting
* fixed missing HDIO_GET_IDENTITY in libsmdev_metadata.c

20100805
* invalid inclusion in libsmdev_handle.h
* fixed includion loop
* updated libcstring, libuna
* updated include/error.h and liberror
* build requires changes
* added msvscpp project files

20100801
* update for mingw64

20100719
* updated include/error.h and liberror
* updated common, libuna

20100716
* updated libuna

20100714
* updated configure.ac
* updated include/error.h and liberror
* updated include/codepage.h
* updated list type
* updated offset list
* updated common, libuna

20100628
* updated common, libcstring, liberror, libnotify, libuna
* clean up

20100505
* updated configure.ac and Makefile.am files
* update libuna
* added missing libsmdev_definitions.h.in

20100502
* updated common. libcstring, liberror, libnotify, libuna
* changed amount of to number of

20100501
* updated common. libcstring

20100430
* worked on mingw support
* updated common, libcstring

20100418
* added libcstring
* updated common, liberror, libnotify, libuna
* email change

20100212
* worked on glob function

20100211